新增单亲情景
父母存下可能是单亲的情况

--- a/genogram.html
+++ b/genogram.html
@@ -20,24 +20,26 @@ var json = [
       name:'尼牙孜·阿不都拉',
       fid:'',
       mid:'',
-      pid:'01p',
+      pid:'',
       cid:["11","12","13"],
       bid:["01"],
       imgurl:"img/01.jpg",
       relation:"户主",
       record : "橙色_在逃人员，红色_特殊群体"
-    },{
-      id:'01p',
-      name:'热依汉·热西提',
-      fid:'',
-      mid:'',
-      pid:'01',
-      cid:["11","12","13"],
-      bid:["01p"],
-      imgurl:"img/15.jpg",
-      relation:"妻子",
-      record : ""
-    }],
+    }
+    // ,{
+    //   id:'01p',
+    //   name:'热依汉·热西提',
+    //   fid:'',
+    //   mid:'',
+    //   pid:'01',
+    //   cid:["11","12","13"],
+    //   bid:["01p"],
+    //   imgurl:"img/15.jpg",
+    //   relation:"妻子",
+    //   record : ""
+    // }
+    ],
   [
     {
       id:'11',
@@ -66,24 +68,15 @@ var json = [
       name:'加马力·艾买提',
       fid:'01',
       mid:'01p',
-      pid:'12p',
+      pid:'',
       cid:["22"],
       bid:["11","12","13","14"],
       imgurl:"img/42.jpg",
       relation:"女儿",
       record : ""
-    },{
-      id:'12p',
-      name:'克来木汗·依明',
-      fid:'',
-      mid:'',
-      pid:'12',
-      cid:["22"],
-      bid:["12p"],
-      imgurl:"img/02.jpg",
-      relation:"女婿",
-      record : "橙色_在逃人员"
-    },{
+    },
+
+    {
       id:'13',
       name:'艾山·阿不都如',
       fid:'01',
@@ -155,7 +148,7 @@ var json = [
       id:'21',
       name:'努尔顿·依米拉',
       fid:'12',
-      mid:'12p',
+      mid:'',
       pid:'21p',
       cid:["31","31","33","34"],
       bid:["21"],
