新增子代婚姻关系关联
新增子代婚姻关系关联

--- a/genogram.html
+++ b/genogram.html
@@ -227,13 +227,24 @@ var json = [
       name:'阿依乃再?麦麦提',
       fid:'21',
       mid:'21p',
-      pid:'',
+      pid:'34p',
       cid:[],
       bid:["31","32","33","34"],
       imgurl:"img/41.jpg",
       relation:"曾孙",
       record : ""
-    }]
+    },{
+      id:'34p',
+      name:'阿依乃再?麦麦提',
+      fid:'',
+      mid:'',
+      pid:'34',
+      cid:[],
+      bid:["34p"],
+      imgurl:"img/41.jpg",
+      relation:"曾孙",
+      record : ""
+    }] 
   ];
 var opt = {
   data : json,
