修复单个子类未向右移动
修复单个子类未向右移动

--- a/genogram.html
+++ b/genogram.html
@@ -13,7 +13,7 @@
 <div id="genogram"></div>
 <div id="png"></div>
 <script type="text/javascript">
-var json = [
+var json1 = [
   [
     {
       id:'01',
@@ -246,6 +246,269 @@ var json = [
       record : ""
     }] 
   ];
+var json = [
+    [
+        {
+            "id": "43367819090701234",
+            "name": "买买提",
+            "fid": "0bd77cd0f19343dd9df08a6f7a90febd",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701235",
+                "43367819090701237"
+            ],
+            "bid": [
+                "43367819090701234"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701234",
+            "relation": "户主",
+            "record": ""
+        }
+    ],
+    [
+        {
+            "id": "43367819090701235",
+            "name": "买一",
+            "fid": "43367819090701234",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701239",
+                "43367819090701238"
+            ],
+            "bid": [
+                "43367819090701235",
+                "43367819090701237"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701235",
+            "relation": "儿子",
+            "record": ""
+        },
+        {
+            "id": "43367819090701237",
+            "name": "买三",
+            "fid": "43367819090701234",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701235",
+                "43367819090701237"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701237",
+            "relation": "女儿",
+            "record": ""
+        }
+    ],
+    [
+        {
+            "id": "43367819090701238",
+            "name": "买买五",
+            "fid": "43367819090701235",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701239",
+                "43367819090701238"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701238",
+            "relation": "儿子",
+            "record": ""
+        },
+        {
+            "id": "43367819090701239",
+            "name": "买买四",
+            "fid": "43367819090701235",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "bid": [
+                "43367819090701239",
+                "43367819090701238"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701239",
+            "relation": "儿子",
+            "record": ""
+        }
+    ],
+    [
+        {
+            "id": "43367819090651335",
+            "name": "",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090651335",
+            "relation": "表哥",
+            "record": ""
+        },
+        {
+            "id": "43367819090681335",
+            "name": "",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090681335",
+            "relation": "同行业",
+            "record": ""
+        },
+        {
+            "id": "43367819090701334",
+            "name": "热力",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701365"
+            ],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701334",
+            "relation": "户主",
+            "record": ""
+        },
+        {
+            "id": "43367819090701335",
+            "name": "",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701335",
+            "relation": "儿子",
+            "record": ""
+        },
+        {
+            "id": "43367819090701336",
+            "name": "",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701336",
+            "relation": "儿子",
+            "record": ""
+        },
+        {
+            "id": "43367819090721335",
+            "name": "",
+            "fid": "43367819090701239",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701324"
+            ],
+            "bid": [
+                "43367819090701335",
+                "43367819090701334",
+                "43367819090681335",
+                "43367819090721335",
+                "43367819090651335",
+                "43367819090701336"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090721335",
+            "relation": "邻居",
+            "record": ""
+        }
+    ],
+    [
+        {
+            "id": "43367819090701365",
+            "name": "",
+            "fid": "43367819090701334",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701365"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701365",
+            "relation": "女儿",
+            "record": ""
+        },
+        {
+            "id": "43367819090701324",
+            "name": "",
+            "fid": "43367819090721335",
+            "mid": "",
+            "pid": "",
+            "cid": [
+                "43367819090701236"
+            ],
+            "bid": [
+                "43367819090701324"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701324",
+            "relation": "表妹",
+            "record": ""
+        }
+    ],
+    [
+        {
+            "id": "43367819090701236",
+            "name": "买二",
+            "fid": "43367819090701324",
+            "mid": "",
+            "pid": "",
+            "cid": [],
+            "bid": [
+                "43367819090701236"
+            ],
+            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701236",
+            "relation": "女儿",
+            "record": ""
+        }
+    ]
+];
 var opt = {
   data : json,
   id : "genogram",
@@ -271,7 +534,7 @@ savepng.onclick = function(){
 
   };
 }
-</script>
+</script> 
      
 </body>  
 </html> 
