右键菜单可控
每个数据项添加usemenu，true为使用右键菜单，false为禁止使用

--- a/genogram.html
+++ b/genogram.html
@@ -295,6 +295,7 @@ var json = [
             "bid": [
                 "43367819090701234"
             ],
+            "usemenu" :false, 
             "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701234",
             "relation": "户主",
             "record": ""
@@ -316,7 +317,7 @@ var json = [
                 "43367819090701235",
                 "43367819090701237"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701235",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701235",
             "relation": "儿子",
             "record": ""
         },
@@ -332,7 +333,7 @@ var json = [
                 "43367819090701235",
                 "43367819090701237"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701237",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701237",
             "relation": "女儿",
             "record": ""
         }
@@ -350,7 +351,7 @@ var json = [
                 "43367819090701239",
                 "43367819090701238"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701238",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701238",
             "relation": "儿子",
             "record": ""
         },
@@ -373,7 +374,7 @@ var json = [
                 "43367819090701239",
                 "43367819090701238"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701239",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701239",
             "relation": "儿子",
             "record": ""
         }
@@ -395,7 +396,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090651335",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090651335",
             "relation": "表哥",
             "record": ""
         },
@@ -415,7 +416,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090681335",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090681335",
             "relation": "同行业",
             "record": ""
         },
@@ -437,7 +438,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701334",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701334",
             "relation": "户主",
             "record": ""
         },
@@ -457,7 +458,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701335",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701335",
             "relation": "儿子",
             "record": ""
         },
@@ -477,7 +478,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701336",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701336",
             "relation": "儿子",
             "record": ""
         },
@@ -499,7 +500,7 @@ var json = [
                 "43367819090651335",
                 "43367819090701336"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090721335",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090721335",
             "relation": "邻居",
             "record": ""
         }
@@ -516,7 +517,7 @@ var json = [
             "bid": [
                 "43367819090701365"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701365",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701365",
             "relation": "女儿",
             "record": ""
         },
@@ -533,7 +534,7 @@ var json = [
             "bid": [
                 "43367819090701324"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701324",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701324",
             "relation": "表妹",
             "record": ""
         }
@@ -550,7 +551,7 @@ var json = [
             "bid": [
                 "43367819090701236"
             ],
-            "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701236",
+            "usemenu" :true, "imgurl": "http://192.168.0.191:8085/ITAP/servlet/back/TPckS?type=cxXP2&ZJHM=43367819090701236",
             "relation": "女儿",
             "record": ""
         }
